base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entebus-server
  namespace: entebus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entebus-server
  template:
    metadata:
      labels:
        app: entebus-server
        tier: backend
    spec:
      containers:
        - name: entebus-server
          image: ghcr.io/nixbug/entebus-server
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: "50m"
            limits:
              cpu: "200m"
