base/openobserve.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openobserve
  namespace: entebus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openobserve
  template:
    metadata:
      labels:
        app: openobserve
        tier: observability
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 2000
        runAsGroup: 2000
      containers:
        - name: openobserve
          image: public.ecr.aws/zinclabs/openobserve
          ports:
            - name: http
              containerPort: 5080
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 45
            periodSeconds: 15
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: openobserve-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: openobserve
  namespace: entebus
spec:
  type: ClusterIP
  selector:
    app: openobserve
  ports:
    - name: http
      port: 5080
      targetPort: http
