base/postgis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgis
  namespace: entebus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgis
  template:
    metadata:
      labels:
        app: postgis
        tier: database
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgis
          image: postgis/postgis
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
            initialDelaySeconds: 45
            periodSeconds: 15
            failureThreshold: 3
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgis
  namespace: entebus
spec:
  type: ClusterIP
  selector:
    app: postgis
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
