base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entebus-ingress
  namespace: entebus
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.entebus.com
      secretName: cloudflare-origin-cert
    - hosts:
        - minio.entebus.com
      secretName: cloudflare-origin-cert
    - hosts:
        - openobserve.entebus.com
      secretName: cloudflare-origin-cert
  rules:
    - host: api.entebus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: entebus-server-svc
                port:
                  number: 80
    - host: minio.entebus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
    - host: openobserve.entebus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openobserve
                port:
                  number: 5080
